# SegEdge

./: .gitignore  README.md  Sam2 segment field.ipynb  pyproject.toml  sam2_notebook.ipynb  samtest.py  segment_farmland_sam2.py  test.py
Dinov3_exmperiments/: dino_test.py  main_dino.py
artifacts/: README.md
configs/dinov3/: default.yaml
data/: README.md
docs/: Research_Questions.md  agents.md  architecture.md
docs/models/: SAM2 requirements.md
docs/pipelines/: dinov3_tree_crowns.md  sam2_farmland.md
docs/references/: grounded Sam and similar models.md
documentations/: DINOv3 Requirements.md  Papers_list.md
experiments/LDSR-S2/: LDSR-S2_main.py  config_10m.yaml
experiments/SATLAS/: SatLas_main.py
experiments/Upscaler/: slurm_upscaler.sh  upscaler_dinov3-sat.py
experiments/coregistration/: coregister_with_arosics.py  sr_job.sh
experiments/dinov3/: test.py
experiments/dinov3Seg/: main.py  main_v2.py  main_v3.py
experiments/get_data_from_api/: main.py
experiments/labels_unifier/: main.py
notebooks/Grounded_SAM/: grounded_sam2.ipynb
notebooks/Upscaler/: Image Upscaler.ipynb  KNN_Upscaler_w_clustering.ipynb  KNN_Upscaler_w_clustering_lots_vram_needed.ipynb
notebooks/dinos_notebooks/: Feature From Image.ipynb  Identify Features.ipynb
notebooks/dinov3_knn_labler/: Dinov3_knn_v1_pipeline.ipynb  dinov3_knn_baseline.ipynb  func.py
notebooks/sam2/: sam2_segment_field.ipynb
requirements/: base.txt
requirements/experiments/: dinov3.txt  (+1 more)
sam2_experiments/: Sam2 segment field.ipynb  sam2_notebook.ipynb  samtest.py  segment_farmland_sam2.py
(+33 files in other folders)
